# sdl3-project

./: CMakeLists.txt  README.md
src/: common.h  main.cpp
src/game/: game.cpp  game.hpp
